@@ -69,6 +69,9 @@ USECOLOR="yes"
 # Copy /etc/mdadm.conf to initramfs.
 # MDADM="no"
 
+# Enable copying of firmware into initramfs
+# FIRMWARE="no"
+# FIRMWARE_DIR="/lib/firmware"
 
 # =========Low Level Compile Settings=========
 #
